--- a/raytracer/tsconfig.json
+++ b/raytracer/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
-        "sourceMap":  true
+        "target": "es5",
+        "module": "commonjs",
+        "sourceMap": true,
+        "outDir": "out"
     }
-}
+}  
